# sgl

./: .gitmodules  CMakeLists.txt  README.md
cmake/: uninstall.cmake
docs/: Doxyfile.in  copyright.txt  sgl.dia  sgl.xmi
docs/dia/: sgl.dia
docs/dox/: arch.dox  main.dox  sr-graph.dox
docs/res/: logo.xcf
examples/graph/: CMakeLists.txt
examples/graph/include/: Graph.h
examples/graph/res/: file.txt
examples/graph/src/: Graph.cpp  graph.cpp  main.cpp
include/sgl/: adjacency_matrix_view.h  edge.h  loadable.h  node.h  sgl.h  simple_view_reader.h  simple_view_writer.h  view.h  view_reader.h  view_source.h  view_writer.h
include/sgl/algo/: prim.h
include/sgl/core/: edge.h  graph.h  node.h
include/sgl/details/: converter.h  dsu.h
include/sgl/disjoint/: dsu.h  list.h  node.h  set.h
include/sgl/io/: reader.h  simple_reader.h  simple_writer.h  writer.h
include/sgl/view/: adjacency_list.h  adjacency_matrix.h  converter.h  edge_list.h  reader.h  simple_reader.h  simple_writer.h  type.h  view.h  writer.h
res/: sgl.xmi
res/uml/: sgl.xmi
src/: Graph.cpp  adjacency_matrix_view.cpp  edge.cpp  node.cpp  simple_view_reader.cpp
src/algo/: prim.cpp
src/core/: edge.cpp  graph.cpp  node.cpp
src/details/: converter.cpp  dsu.cpp
src/disjoint/: dsu.cpp
src/io/: simple_reader.cpp  simple_writer.cpp
src/view/: adjacency_list.cpp  adjacency_matrix.cpp  converter.cpp  edge_list.cpp  simple_reader.cpp  simple_writer.cpp  view.cpp
tests/: adjacency_list.h  adjacency_matrix.h  adjacency_matrix_view.h  converter.h  dsu.h  edge_list.h  loadable.h  prim.h  simple_reader.h  simple_view_reader.h  simple_writer.h
tests/algo/: prim.h
tests/details/: converter.h
tests/disjoint/: dsu.h  list.h  set.h
tests/io/: simple_reader.h  simple_writer.h
tests/view/: adjacency_list.h  adjacency_matrix.h  edge_list.h
uml/: sgl.xmi
